--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jszip": "^3.10.1",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8"
   },
