--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
